--- a/register.html
+++ b/register.html
@@ -29,6 +29,9 @@
           <input type="password" placeholder="Enter Password" id="pd" name="psw" required>
           <br>
           <br>
+          <label for="psw"><b style="color: #FCCA27;">retype Password</b></label>
+          <input type="password" placeholder="Enter Password" id="pdcheck" name="psw" required>
+          <br>
           <br>
       
     
