--- a/BUS-Home.html
+++ b/BUS-Home.html
@@ -216,13 +216,13 @@
     </div>
 </div>
 
-<footer>
-    <p id="recht">The authors assume no liability whatsoever with regard to the correctness, accuracy, up-to-dateness, reliability and completeness of the information.
+<footer id="recht">
+    <p>The authors assume no liability whatsoever with regard to the correctness, accuracy, up-to-dateness, reliability and completeness of the information.
         Liability claims regarding damage caused by the use of any information provided, including any kind of information which is incomplete or incorrect, will therefore be rejected.
         All offers are non-binding. The authors expressly reserve the right to change, supplement or delete parts of the pages or the entire offer without special notice or to discontinue publication temporarily or permanently.
         </p>
 
-    <p id="recht">Alle Angaben ohne Gewehr</p>
+    <p>Alle Angaben ohne Gewehr</p>
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
