--- a/CopyCat/Pear.html
+++ b/CopyCat/Pear.html
@@ -10,45 +10,45 @@
 <body>
     <div class="nav">
         <Center>
-            <p>
+            <a>
                 <img src="../Bilder/pear.png" class="navImage">
-            </p>
-            <p>
+            </a>
+            <a>
                 Store
-            </p>
-            <p>
+            </a>
+            <a>
                 pMac
-            </p>
-            <p>
+            </a>
+            <a>
                 pPad
-            </p>
-            <p>
+            </a>
+            <a>
                 pPhone
-            </p>
-            <p>
+            </a>
+            <a>
                 Watch
-            </p>
-            <p>
+            </a>
+            <a>
                 AirPears
-            </p>
-            <p>
+            </a>
+            <a>
                 TV & Home
-            </p>
-            <p>
+            </a>
+            <a>
                 Nur mit Pear
-            </p>
-            <p>
+            </a>
+            <a>
                 Zubehör
-            </p>
-            <p>
+            </a>
+            <a>
                 Support
-            </p>
-            <p>
+            </a>
+            <a>
                 <img src="../Bilder/lupe.png" class="navImage">
-            </p>
-            <p>
+            </a>
+            <a>
                 <img src="../Bilder/warekorb.png" class="navImage">
-            </p>
+            </a>
         </Center>
     </div>
 
@@ -69,15 +69,15 @@
                 <a class="unit-link" href="https://www.apple.com/chde/iphone-13-pro/" target="_self" rel="follow" data-analytics-region="learn more" aria-hidden="true" tabindex="-1" data-focus-method="mouse">&nbsp;</a>
     
                 <div class="unit-copy-wrapper">
-                    <h2 >iPhone&nbsp;13&nbsp;Pro</h2>
-                    <h3 >So. Was. Von.&nbsp;Pro.</h3>
+                    <h2 id="Pro">iPhone&nbsp;13&nbsp;Pro</h2>
+                    <p>So. Was. Von.&nbsp;Pro.</p>
         
                     <div class="cta-links">
                         <a class="icon icon-after icon-chevronright" href="https://www.apple.com/chde/iphone-13-pro/" target="_self" rel="follow" data-analytics-region="learn more" data-analytics-title="Learn more about iPhone 13 Pro" aria-label="Weitere Infos zum iPhone 13 Pro">Weitere Infos</a> <a class="icon icon-after icon-chevronright" href="https://www.apple.com/ch-de/shop/goto/buy_iphone/iphone_13_pro" target="_self" rel="follow" data-analytics-region="buy" data-analytics-title="Buy iPhone 13 Pro" aria-label="iPhone 13 Pro kaufen">Kaufen</a>
                     </div>
                 </div>
                 <div class="unit-image-wrapper">
-                    <img src="../Bilder/13pro.PNG" alt="">
+                    <img src="../Bilder/13pro.PNG" alt="" id="imagePro">
                     </figure>
                 </div>
             </div>		
