--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
           <br>
       
           <button type="submit" class="loginButton" id="login">Login</button>
-          <button type="submit" class="loginButton" id="login"><a href="register.html">Register</a></button>
+          <button type="submit" class="loginButton" id="login"><a href="register.html" id="linkCreateLogin">Register</a></button>
 
         </div>
         <br>
