--- a/profileHome.html
+++ b/profileHome.html
@@ -73,7 +73,7 @@
             </li>
 
             <li class="nav-item form-inline mr-auto">
-                <a class="navbar-brand" style="color:FCCA27;" href="login.html">Login</a>
+                <a class="navbar-brand" id="loginForm" style="color:FCCA27;" href="login.html">Login</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
